Correction exemple dualite

--- a/5. Dualite.tex
+++ b/5. Dualite.tex
@@ -1068,7 +1068,7 @@ Non réalisable & impossible & possible & possible \\
 		\min_x \ & -x_1 - 4x_2 -3x_3 \\
 		\mbox{t.q. } & 2x_1 + 2x_2 + x_3 + x_4 = 4 \\
 		& x_1 + 2x_2 + 2x_3 + x_5 = 6 \\
-		& x_1 \geq 0,\ x_2 \geq 0,\ x_3 \geq 0.
+		& x_1 \geq 0,\ x_2 \geq 0,\ x_3 \geq 0,\ x_4 \geq 0,\ x_5 \geq 0.
 	\end{align*}
 	
 \end{frame}
