Mise à jour points intérieurs.

--- a/7. PI - Introduction.tex
+++ b/7. PI - Introduction.tex
@@ -360,7 +360,7 @@ C'est un système linéaire de $2m + 2n$ équations à $2m + 2n$ inconnues, que 
 x &\leftarrow x + \alpha \Delta x \\
 \lambda &\leftarrow \lambda + \alpha \Delta \lambda \\
 u &\leftarrow u + \alpha \Delta u \\
-t &\leftarrow t + \alpha \Delta u \\
+t &\leftarrow t + \alpha \Delta t \\
 \end{align*}
 $\alpha$ est un paramètre qui sert à maintenir $x$, $\lambda$, $t$, $u$, $t$ positifs.
 
