Mise à jour titres

--- a/6. Simplexe primal-dual.tex
+++ b/6. Simplexe primal-dual.tex
@@ -9,7 +9,7 @@
 
 % \setbeamercovered{transparent}
 %\usecolortheme{crane}
-\title[IFT2505]{IFT 2505\\Programmation Linéaire\\Algorithme du simplexe primal-dual}
+\title[Simplexe primal-dual]{Programmation Linéaire\\Algorithme du simplexe primal-dual}
 \author[Fabian Bastin]{Fabian Bastin\\DIRO\\Université de Montréal}
 \date{}
 
