--- a/7. PI - Introduction.tex
+++ b/7. PI - Introduction.tex
@@ -8,7 +8,7 @@
 
 % \setbeamercovered{transparent}
 %\usecolortheme{crane}
-\title[IFT2505]{IFT 2505\\Programmation Linéaire\\Points Intérieurs\\Introduction}
+\title[Introduction points intérieurs]{Points intérieurs\\Introduction}
 \author[Fabian Bastin]{Fabian Bastin\\DIRO\\Université de Montréal}
 \date{}
 
