--- a/8. Points Interieurs.tex
+++ b/8. Points Interieurs.tex
@@ -6,7 +6,7 @@
 
 % \setbeamercovered{transparent}
 %\usecolortheme{crane}
-\title[IFT2505]{IFT 2505\\Méthodes de points intérieurs}
+\title[Points intérieurs]{Méthodes de points intérieurs}
 \author[Fabian Bastin]{Fabian Bastin\\DIRO\\Université de Montréal}
 \date{}
 
