--- a/9. PLNE.tex
+++ b/9. PLNE.tex
@@ -8,7 +8,7 @@
 
 % \setbeamercovered{transparent}
 %\usecolortheme{crane}
-\title[IFT2505 -- PLNE]{IFT 2505\\Programmation Linéaire\\Programmation linéaire en nombres entiers}
+\title[PLNE]{Programmation linéaire en nombres entiers}
 \author[Fabian Bastin]{Fabian Bastin\\DIRO\\Université de Montréal\\\mbox{}}
 \date{}
 
