--- a/8. Points Interieurs.tex
+++ b/8. Points Interieurs.tex
@@ -945,7 +945,7 @@ H(x) & = \mu X^{-2}
 	$$
 	\bx_{k+1} = \bx_k - J^{-1}(\bx_k) F(\bx_k)
 	$$
-	où $J(\bx_k)$ est la matrice jacobienne de f:
+	où $J(\bx_k)$ est la matrice jacobienne de $F$:
 	\[
 	J(\bx) =
 	\begin{pmatrix}
