--- a/10. Transport.tex
+++ b/10. Transport.tex
@@ -1267,7 +1267,7 @@ La plus petite variable avec le signe moins est $x_{51} = 10$, aussi $\theta = 1
 \end{frame}
 
 \begin{frame}
-	\frametitle{Multiplicateurs du simplexe}
+	\frametitle{Algorithme}
 	
 Nous sommes à présent en mesure de décrire l'algorithme complet.
 
@@ -1370,7 +1370,7 @@ Les coûts réduits sont
 	\begin{tabular}{ccccc|c}
 		{\bf 0} & {\bf 0} & 1 & 1 & 4 & 5 \\
 		1 & {\bf 0} & 1 & {\bf 0} & 2 & 3 \\
-		3 & 2 & 1 & {\bf 0} & 2 & 1 \\
+		3 & 2 & 1 & {\bf 0} & 1 & 1 \\
 		3 & 2 & {\bf 0} & {\bf 0} & {\bf 0} & 2 \\
 		\hline
 		-2 & -1 & 0 & 2 & 0 & 
