Mise à jour fondamentaux

--- a/1. Fondements.tex
+++ b/1. Fondements.tex
@@ -176,7 +176,7 @@ si $y_k < 0$, $(x_k - \epsilon y_k)$ augmente,
 \item 
 si $y_k > 0$, $(x_k - \epsilon y_k)$ diminue,
 \item 
-si $y_k < 0$, $(x_k - \epsilon y_k)$ reste constant.
+si $y_k = 0$, $(x_k - \epsilon y_k)$ reste constant.
 \end{itemize}
 \end{frame}
 
@@ -254,7 +254,7 @@ matrices à considérer pour déterminer des solutions de base.
 
 \mbox{}
 
-Exemple: 100 variables, 40 contraintes
+\textcolor{blue}{Exemple}: 100 variables, 40 contraintes
 \[
 \begin{pmatrix}
 100 \\ 40
