Mise à jour Fondements et Simplexe.

--- a/2. Simplexe.tex
+++ b/2. Simplexe.tex
@@ -440,7 +440,14 @@ x_1 \ba_1 + x_2 \ba_2 + \ldots + x_n \ba_n = \bb.
 
 \mbox{}
 
-Si $m < n$, la solution n'est pas unique, mais il y a une famille de solutions. Par contre, la représentation de $\bb$ est unique comme combinaison linéaire d'un sous-ensemble linéairement indépendant de $m$ de ces vecteurs. La solution correspondante, avec $n-m$ variable $x_i$ mises à zéro, est une solution de base.
+\begin{itemize}
+	\item 
+Si $m < n$, la solution n'est pas unique: il y a une famille de solutions.
+	\item 
+Par contre, la représentation de $\bb$ est unique comme combinaison linéaire d'un sous-ensemble linéairement indépendant de $m$ de ces vecteurs.
+	\item 
+La solution correspondante, avec $n-m$ variable $x_i$ mises à zéro, est une solution de base.
+\end{itemize}
 
 \end{frame}
 
@@ -492,7 +499,7 @@ On obtient la relation en identifiant colonne par colonne:
 \begin{frame}
 \frametitle{Pivot}
 
-Supposons que nous souhaitions remplacer le vecteur de base $\ba_p$, $1 \leq p \leq m$, par le vecteur $\ba_q$, en supposant de plus que nous gardions un ensemble de vecteurs indépendants.
+Supposons que nous souhaitions remplacer le vecteur de base $\ba_p$, $1 \leq p \leq m$, par le vecteur $\ba_q$, en supposant de plus que nous gardions un ensemble de vecteurs linéairement indépendants.
 
 \mbox{}
 
