--- a/3. Variables Artificielles.tex
+++ b/3. Variables Artificielles.tex
@@ -98,25 +98,26 @@ $\by = (y_1, y_2,\ldots, y_m)$ est un vecteur de variables artificielles.
 \begin{frame}
 \frametitle{Variables artificielles}
 
+\begin{itemize}
+\item 
 Le programme artificiel est déjà sous forme canonique, avec comme solution de base $\by = \bb$.
-
-\mbox{}
-
+\item 
 Si le programme initial est réalisable, une solution optimale du programme artificiel est $\by = 0$.
-En effet, nous avons alors qu'il existe un $\bx \geq 0$ tel que $\bA\bx = \bb$. Dès lors $\by = 0$ est réalisable pour le programme artificiel, et est clairement optimale.
+En effet, nous avons alors qu'il existe un $\bx \geq 0$ tel que $\bA\bx = \bb$.
+\item
 Sinon, si le programme initial n'est pas réalisable, aucun $\bx \geq 0$ ne satisfait le système linéaire $\bA \bx = \bb$.
 La valeur optimale du programme artificiel est $> 0$.
-
-\mbox{}
-
-Si dans la solution finale certaines composantes de $\by$ sont toujours dans la base, nous avons une solution de base dégénérée. Si $A$ est de rang plein, on peut échanger chacun des $y_i$ avec une variable hors-base. Si la solution est non-dégénérée, aucune composante de $\by$ n'est encore dans la base.
+\item 
+Si le problème est réalisable et si dans la solution finale certaines composantes de $\by$ sont toujours dans la base, nous avons une solution de base dégénérée. Si $A$ est de rang plein, on peut échanger chacun des $y_i$ avec une variable hors-base.
+%Si la solution est non-dégénérée, aucune composante de $\by$ n'est encore dans la base.
+\end{itemize}
 
 \end{frame}
 
 \begin{frame}
 \frametitle{Variables artificielles: exemple}
 
-On considère le système
+Considérons le système
 \begin{align*}
 & 2x_1 + x_2 + 2x_3 = 4 \\
 & 3x_1 + 3x_2 + x_3 = 3 \\
